fixed footer overlapping main body content

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ body
 {
     background-color: black;
     background-image: url('assets/background.jpg');
+    margin-bottom: 224px;
 }
 
 
